--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -7,15 +7,13 @@
     <title>Teste</title>
     <style>
         body{
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
+            height: 100vh;
+            background: #0000 url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -26,7 +24,8 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quod repellendus dolorem facere. Ipsa quisquam cumque repudiandae quia! Repellendus distinctio dolor velit. Dolore eveniet, minima reiciendis delectus ad velit deleniti! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia deleniti ab placeat eaque praesentium aut aspernatur debitis. Voluptates saepe excepturi, nobis error accusantium mollitia illum soluta natus ratione dicta voluptas. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam ullam aspernatur non deleniti optio beatae sapiente quaerat consectetur! Quaerat error molestiae soluta iure reprehenderit modi ipsa dolore possimus cupiditate autem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quod repellendus dolorem facere. Ipsa quisquam cumque repudiandae quia! Repellendus distinctio dolor velit. Dolore eveniet, minima reiciendis delectus ad velit deleniti! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia deleniti ab placeat eaque praesentium aut aspernatur debitis. Voluptates saepe excepturi, nobis error accusantium mollitia illum soluta natus ratione dicta voluptas. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam ullam aspernatur non deleniti optio beatae sapiente quaerat consectetur! Quaerat error molestiae soluta iure reprehenderit modi ipsa dolore possimus cupiditate autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore dolorem, nisi, maiores nesciunt esse tempore voluptates corrupti nobis non neque ex, accusamus error. Voluptas delectus facilis id a praesentium. Obcaecati?</p> 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium maiores facilis porro in ducimus earum laboriosam? Temporibus iusto soluta quasi non, veritatis vel voluptas, illo fugiat iste officia, aspernatur neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima doloremque quam laudantium labore eveniet? Voluptatibus maiores minima eius, voluptate assumenda inventore velit temporibus omnis enim officiis? Laboriosam nemo necessitatibus nostrum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur odit, non inventore repellendus atque voluptas reiciendis dolores sunt magni architecto odio tenetur consequuntur nisi suscipit animi quam placeat? Cum, nam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam tempore quia, aspernatur labore optio sit, ea ducimus, molestiae itaque harum suscipit expedita? Odit praesentium quas labore asperiores dolor, nesciunt soluta?</p>
     </main>
     
 </body>
